fix: table horizontal scrollbars

--- a/resources/sass/components/_data-table.scss
+++ b/resources/sass/components/_data-table.scss
@@ -6,7 +6,7 @@
 }
 
 .data-table-wrapper {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 /* header */
